--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Sample Deployment</title>
+  <title>website wahyu</title>
   <style>
     body {
       color: #ffffff;
@@ -26,8 +26,8 @@
 </head>
 <body>
   <div align="center">
-    <h1>Congratulations</h1>
-    <h2>halo halaman ini sudah saya ubah.</h2>
+    <h1>halo nama saya wahyu</h1>
+    <h2>MSIB batch 4</h2>
     <p>For next steps, read the <a href="http://aws.amazon.com/documentation/codedeploy">AWS CodeDeploy Documentation</a>.</p>
   </div>
 </body>
